# escrow-gigs-bot

./: .env  .env.example  .flake8  .gitignore  Caddyfile  Dockerfile  Dockerfile.dev  Dockerfile.i18n  Dockerfile.setup  JULES_REBUILD_PLAN.md  README.md  README_Codex.md  _autostart.py  _autostart.py.work  _patched_telegram_bot.py  app.py  app.py.work  app.service  babel.cfg  backup.sh  bot.service  check_saldo_tron.py  check_status.sh  codex-constraints.txt  codex-setup.sh  codex.sh  configure_btc.sh  conversione_priv_key.py  create_wallet.py  crow_gigs.db  deploy.sh  diagnose.sh  docker-compose.dev.yml  docker-compose.setup.yml  docker-compose.yml  docker-compose.yml.bak  enable_bot_menu_and_handlers.sh  fix_bot_definitivo.sh  fix_help_final.sh  fix_override_yaml.sh  (+26 more)
.github/ISSUE_TEMPLATE/: codex_task.yml
.github/workflows/: ci.yml
JULES_TASKS/: PHASE_1.md  PHASE_2A_CORE_BOT.md  PHASE_2B_DATA_MODELS.md
alembic/: env.py
api/: webhooks.py
app/: _autostart.py  _autostart.py.remote  app.py  config.py  db.py  db_core.py  db_utils.py  i18n.py  lang_command.py  main.py  models.py  tasks.py  telegram_bot.py  translator.py
caddy/: Caddyfile
crow_gigs_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
db/: __init__.py
escrow_gigs_bot.egg-info/: PKG-INFO  SOURCES.txt
i18n/: __init__.py
models/: __init__.py  feedback.py  wallet.py
scripts/: compile_translations.sh
services/: search.py
src/: i18n.py  init_db.py
tests/: test_handlers_basic.py  test_search.py  test_startup.py  test_user_service.py  test_wallet_math.py  test_wallet_webhook.py
(+74 files in other folders)
