[project]
name = "crow-gigs-bot"
version = "0.1.0"
description = "A Telegram bot for managing gigs."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-telegram-bot[ext]",
    "Babel"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest"
]

[tool.setuptools]
packages = ["app"]

[tool.mypy]
exclude = ["build/"]
